feat: add component preview

--- a/apps/www/src/components/starlight/PageTitle.astro
+++ b/apps/www/src/components/starlight/PageTitle.astro
@@ -1,9 +1,12 @@
 ---
-import { cn } from "@/lib/utils";
-import { PAGE_TITLE_ID } from "../../constants";
 import type { Props } from "@astrojs/starlight/props";
 
+import {} from "@ng-icons/radix-icon";
+
+import { cn } from "@/lib/utils";
 import { badgeVariants } from "@/registry/new-york/ui/badge.directive";
+
+import { PAGE_TITLE_ID } from "../../constants";
 ---
 
 <div
