--- a/apps/www/src/components/starlight/ContentPanel.astro
+++ b/apps/www/src/components/starlight/ContentPanel.astro
@@ -1,1 +1,13 @@
-<slot />
+---
+import type { Props } from "@astrojs/starlight/props";
+---
+
+<div class="content-panel">
+  <slot />
+</div>
+
+<style>
+  .content-panel {
+    padding: 1.5rem var(--sl-content-pad-x);
+  }
+</style>
