--- a/apps/www/src/tailwind.css
+++ b/apps/www/src/tailwind.css
@@ -30,6 +30,11 @@
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
+
+    --sl-color-bg-sidebar: hsl(var(--background));
+    --sl-color-bg-nav: hsl(var(--background));
+    --sl-color-black: hsl(var(--background));
+    --sl-sidebar-width: 28rem;
   }
 
   [data-theme="dark"] {
