--- a/apps/www/src/components/starlight/MobileMenuToggle.astro
+++ b/apps/www/src/components/starlight/MobileMenuToggle.astro
@@ -61,8 +61,7 @@ const { labels } = Astro.props;
 <style>
   button {
     position: fixed;
-    top: calc((var(--sl-nav-height) - var(--sl-menu-button-size)) / 3);
-    inset-inline-end: var(--sl-nav-pad-x);
-    z-index: var(--sl-z-index-navbar);
+    top: calc((var(--sl-nav-height) - var(--sl-menu-button-size)) / 2.5);
+    z-index: 99;
   }
 </style>
