--- a/apps/www/src/components/starlight/TwoColumnContent.astro
+++ b/apps/www/src/components/starlight/TwoColumnContent.astro
@@ -2,56 +2,17 @@
 import type { Props } from "@astrojs/starlight/props";
 ---
 
-<div class="lg:sl-flex">
-  {
-    Astro.props.toc && (
-      <aside class="right-sidebar-container">
-        <div class="right-sidebar">
-          <slot name="right-sidebar" />
-        </div>
-      </aside>
-    )
-  }
-  <div
-    class:list={["main-pane", Astro.props.hasSidebar ? "mx-auto md:w-1/2" : ""]}
-  >
+<main class="relative py-6 lg:gap-10 lg:py-8 xl:grid xl:grid-cols-[1fr_300px]">
+  <div class="mx-auto w-full min-w-0">
     <slot />
   </div>
-</div>
-
-<style>
-  .main-pane {
-    isolation: isolate;
+  {
+    Astro.props.toc && (
+      <div class="hidden text-sm xl:block">
+        <div class="sticky top-16 -mt-10 pt-4">
+          <slot name="right-sidebar" />
+        </div>
+      </div>
+    )
   }
-
-  @media (min-width: 72rem) {
-    .right-sidebar-container {
-      order: 2;
-      position: relative;
-      width: calc(
-        var(--sl-sidebar-width) +
-          (100% - var(--sl-content-width) - var(--sl-sidebar-width)) / 2
-      );
-    }
-
-    .right-sidebar {
-      position: fixed;
-      top: 0;
-      padding-top: var(--sl-nav-height);
-      width: 100%;
-      height: 100vh;
-      overflow-y: auto;
-      scrollbar-width: none;
-    }
-
-    .main-pane {
-      width: 100%;
-    }
-
-    :global([data-has-sidebar][data-has-toc]) .main-pane {
-      --sl-content-margin-inline: auto 0;
-
-      order: 1;
-    }
-  }
-</style>
+</main>
