--- a/apps/www/src/components/starlight/PageSidebar.astro
+++ b/apps/www/src/components/starlight/PageSidebar.astro
@@ -11,7 +11,7 @@ import TableOfContents from "@astrojs/starlight/components/TableOfContents.astro
       <div class="lg:hidden">
         <MobileTableOfContents {...Astro.props} />
       </div>
-      <div class="hidden lg:block right-sidebar-panel">
+      <div class="hidden lg:block right-sidebar-panel mt-2">
         <TableOfContents {...Astro.props} />
       </div>
     </>
@@ -30,7 +30,7 @@ import TableOfContents from "@astrojs/starlight/components/TableOfContents.astro
     @apply mt-0 pt-2;
   }
   .right-sidebar-panel :global(ul > li > a) {
-    @apply inline-block no-underline transition-colors hover:text-foreground text-muted-foreground;
+    @apply inline-block no-underline transition-colors hover:text-foreground text-muted-foreground p-0;
   }
   .right-sidebar-panel :global(ul > li > a[aria-current="true"]) {
     @apply text-primary;
