--- a/apps/www/src/components/starlight/SidebarSublist.astro
+++ b/apps/www/src/components/starlight/SidebarSublist.astro
@@ -1,6 +1,6 @@
 ---
 import { cn } from "@/lib/utils";
-import { flattenSidebar, type SidebarEntry } from "../../utils/navigation";
+import type { SidebarEntry } from "../../utils/navigation";
 import { Badge } from "@astrojs/starlight/components";
 
 interface Props {
