refactor: remove unnecessary inline style in PageTitle.astro

--- a/apps/www/src/components/starlight/PageTitle.astro
+++ b/apps/www/src/components/starlight/PageTitle.astro
@@ -24,7 +24,7 @@ import { PAGE_TITLE_ID } from "../../constants";
   {
     Astro.props.entry.data.description && (
       <p class="text-base text-muted-foreground">
-        <span style="text-wrap: balance; display: inline-block; vertical-align: top; text-decoration: inherit; max-width: 454px;">
+        <span style="text-wrap: balance; display: inline-block; vertical-align: top; text-decoration: inherit;">
           {Astro.props.entry.data.description}
         </span>
       </p>
