--- a/docs/src/components/mdx/step.astro
+++ b/docs/src/components/mdx/step.astro
@@ -2,9 +2,9 @@
 const props = Astro.props;
 ---
 
-<div
-  class="[&>h3]:step steps mb-12 ml-4 border-l pl-8 [counter-reset:step]"
+<h3
+  class="font-heading mt-8 scroll-m-20 text-xl font-semibold tracking-tight"
   {...props}
 >
     <slot />
-</div>
+</h3>
