--- a/docs/src/components/mdx/a.astro
+++ b/docs/src/components/mdx/a.astro
@@ -1,5 +1,7 @@
 ---
-const props = Astro.props;
+import { cn } from '@/lib/utils'
+
+const { class: className, ...props } = Astro.props
 ---
 
-<a class="font-medium underline underline-offset-4" {...props}><slot /></a>
+<a class={cn('font-medium underline underline-offset-4', className)} {...props}><slot /></a>
