--- a/docs/src/components/mdx/blockquote.astro
+++ b/docs/src/components/mdx/blockquote.astro
@@ -4,6 +4,6 @@ import { cn } from '@/lib/utils'
 const { class: className, ...props } = Astro.props
 ---
 
-<h6 class={cn('mt-8 scroll-m-20 text-base font-semibold tracking-tight', className)} {...props}>
+<blockquote class={cn('mt-6 border-l-2 pl-6 italic', className)} {...props}>
     <slot />
-</h6>
+</blockquote>
