--- a/docs/src/components/mdx/h1.astro
+++ b/docs/src/components/mdx/h1.astro
@@ -1,7 +1,9 @@
 ---
-const props = Astro.props;
+import { cn } from '@/lib/utils'
+
+const { class: className, ...props } = Astro.props
 ---
 
-<h1 class="font-heading mt-2 scroll-m-20 text-4xl font-bold" {...props}>
+<h1 class={cn('font-heading mt-2 scroll-m-20 text-4xl font-bold', className)} {...props}>
     <slot />
 </h1>
