--- a/docs/src/components/mdx/h2.astro
+++ b/docs/src/components/mdx/h2.astro
@@ -1,10 +1,9 @@
 ---
-const props = Astro.props;
+import { cn } from '@/lib/utils'
+
+const { class: className, ...props } = Astro.props
 ---
 
-<h2
-  class="font-heading mt-12 scroll-m-20 border-b pb-2 text-2xl font-semibold tracking-tight first:mt-0"
-  {...props}
->
+<h2 class={cn('font-heading mt-12 scroll-m-20 border-b pb-2 text-2xl font-semibold tracking-tight first:mt-0', className)} {...props}>
     <slot />
 </h2>
