--- a/docs/src/components/mdx/h5.astro
+++ b/docs/src/components/mdx/h5.astro
@@ -1,10 +1,9 @@
 ---
-const props = Astro.props;
+import { cn } from '@/lib/utils'
+
+const { class: className, ...props } = Astro.props
 ---
 
-<h5
-  class="font-heading mt-8 scroll-m-20 text-xl font-semibold tracking-tight"
-  {...props}
->
+<h5 class={cn('mt-8 scroll-m-20 text-lg font-semibold tracking-tight', className)} {...props}>
     <slot />
 </h5>
