--- a/docs/src/components/mdx/ol.astro
+++ b/docs/src/components/mdx/ol.astro
@@ -1,7 +1,9 @@
 ---
-const props = Astro.props;
+import { cn } from '@/lib/utils'
+
+const { class: className, ...props } = Astro.props
 ---
 
-<ol class="my-6 ml-6 list-decimal" {...props}>
+<ol class={cn('my-6 ml-6 list-decimal', className)} {...props}>
     <slot />
 </ol>
