--- a/docs/src/components/mdx/ul.astro
+++ b/docs/src/components/mdx/ul.astro
@@ -1,7 +1,9 @@
 ---
-const props = Astro.props;
+import { cn } from '@/lib/utils'
+
+const { class: className, ...props } = Astro.props
 ---
 
-<ul class="my-6 ml-6 list-disc" {...props}>
+<ul class={cn('my-6 ml-6 list-disc', className)} {...props}>
     <slot />
 </ul>
