--- a/docs/src/layouts/DocsLayout.astro
+++ b/docs/src/layouts/DocsLayout.astro
@@ -29,23 +29,26 @@ const { pathname } = Astro.url
             </aside>
             <main class="relative py-6 lg:gap-10 lg:py-8 xl:grid xl:grid-cols-[1fr_300px]">
                 <div class="mx-auto w-full min-w-0">
-                    <div class="mb-4 flex items-center space-x-1 text-sm text-muted-foreground">
-                        <div class="overflow-hidden text-ellipsis whitespace-nowrap">Docs</div>
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" viewBox="0 0 24 24">
-                            <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m9 6l6 6l-6 6"></path>
+                    <div class="mb-4 flex items-center space-x-1 text-sm leading-none text-muted-foreground">
+                        <div class="truncate">Docs</div>
+                        <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg" class="h-3.5 w-3.5">
+                            <path
+                              d="M6.1584 3.13508C6.35985 2.94621 6.67627 2.95642 6.86514 3.15788L10.6151 7.15788C10.7954 7.3502 10.7954 7.64949 10.6151 7.84182L6.86514 11.8418C6.67627 12.0433 6.35985 12.0535 6.1584 11.8646C5.95694 11.6757 5.94673 11.3593 6.1356 11.1579L9.565 7.49985L6.1356 3.84182C5.94673 3.64036 5.95694 3.32394 6.1584 3.13508Z"
+                              fill="currentColor"
+                              fill-rule="evenodd"
+                              clip-rule="evenodd"
+                            ></path>
                         </svg>
-                        <div class="font-medium text-foreground">
-                            {entry.data.title}
-                        </div>
+                        <div class="text-foreground">{entry.data.title}</div>
                     </div>
                     <div class="space-y-2">
-                        <h1 class="scroll-m-20 text-4xl font-bold tracking-tight">
+                        <h1 class="scroll-m-20 text-3xl font-bold tracking-tight">
                             {entry.data.title}
                         </h1>
                         {
                             entry.data.description
 ? (
-                                <p class="text-lg text-muted-foreground">
+                                <p class="text-base text-muted-foreground">
                                     <span class="text-balance">{entry.data.description}</span>
                                 </p>
                             )
@@ -66,7 +69,7 @@ const { pathname } = Astro.url
                                             variant: 'secondary',
                                         })}
                                     >
-                                        Docs{' '}
+                                        Docs
                                         <svg xmlns="http://www.w3.org/2000/svg" class="ml-1 h-3 w-3" viewBox="0 0 24 24">
                                             <path
                                               fill="none"
@@ -108,7 +111,7 @@ const { pathname } = Astro.url
                         )
 : null
                     }
-                    <div class="max-w-full pb-12">
+                    <div class="pb-12 pt-8">
                         <slot />
                     </div>
                     <PageNavigation />
@@ -116,7 +119,9 @@ const { pathname } = Astro.url
 
                 <div class="hidden text-sm xl:block">
                     <div class="sticky top-16 -mt-10 h-[calc(100vh-3.5rem)] overflow-hidden pt-6">
-                        <Toc data={headings} />
+                        <div class="h-full pb-10">
+                            <Toc data={headings} />
+                        </div>
                     </div>
                 </div>
             </main>
