chore: create new registry

--- a/docs/src/components/component-preview/ComponentSource.astro
+++ b/docs/src/components/component-preview/ComponentSource.astro
@@ -2,8 +2,8 @@
 import { readFileSync } from 'node:fs'
 import path from 'node:path'
 import process from 'node:process'
-import { styles } from '@/registry/styles'
-import { ui } from '@/registry/ui'
+import { styles } from '@/registry/registry-styles'
+import { ui } from '@/registry/registry-ui'
 import { Code as CodeAstro } from 'astro/components'
 import blackout from '../../../theme/dark.json'
 import { CopyButton } from '../copy-button'
@@ -18,9 +18,9 @@ const { name } = Astro.props
 
 const componentUi = ui.find(value => value.name === name)
 
-const allComponents = componentUi?.files.flatMap((file) => {
+const allComponents = componentUi?.files?.flatMap((file) => {
     return styles.map((style) => {
-        const filename = path.join(process.cwd(), 'src', 'registry', style.name, file)
+        const filename = path.join(process.cwd(), 'src', 'registry', style.name, typeof file === 'string' ? file : file.path)
 
         let code: string | null
 
