--- a/docs/src/components/component-preview/ComponentPreview.astro
+++ b/docs/src/components/component-preview/ComponentPreview.astro
@@ -3,7 +3,7 @@ import { existsSync, readFileSync } from 'node:fs'
 import path from 'node:path'
 import process from 'node:process'
 import { cn } from '@/lib/utils'
-import { styles } from '@/registry/styles'
+import { styles } from '@/registry/registry-styles'
 
 import { CopyButton } from '../copy-button'
 
