--- a/docs/src/components/component-preview/ComponentSource.astro
+++ b/docs/src/components/component-preview/ComponentSource.astro
@@ -5,7 +5,6 @@ import process from 'node:process'
 import { styles } from '@/registry/registry-styles'
 import { ui } from '@/registry/registry-ui'
 import { Code as CodeAstro } from 'astro/components'
-import blackout from '../../../theme/dark.json'
 import { CopyButton } from '../copy-button'
 
 import { Select, SelectContent, syncKey } from './select'
@@ -49,7 +48,7 @@ const allComponents = componentUi?.files?.flatMap((file) => {
                 {code
 ? (
                     <div class="relative">
-                        <CodeAstro code={code} lang="ts" theme={JSON.parse(JSON.stringify(blackout))} class="mb-4 mt-6 max-h-[650px] overflow-x-auto rounded-lg border !bg-zinc-950 py-4 dark:!bg-zinc-900 px-4" />
+                        <CodeAstro code={code} lang="ts" theme="github-dark-default" class="mb-4 mt-6 max-h-[650px] overflow-x-auto rounded-lg border !bg-zinc-950 py-4 dark:!bg-zinc-900 px-4" />
                         <CopyButton client:load {...{ rawString: code, withMeta: false }} />
                     </div>
                 )
