--- a/docs/src/components/component-preview/RawCode.astro
+++ b/docs/src/components/component-preview/RawCode.astro
@@ -1,6 +1,5 @@
 ---
 import { Code as CodeAstro } from 'astro/components'
-import blackout from '../../../theme/dark.json'
 
 import { CopyButton } from '../copy-button'
 
@@ -12,6 +11,6 @@ const { code } = Astro.props
 ---
 
 <div data-raw-code class="relative">
-    <CodeAstro code={code} lang="ts" theme={JSON.parse(JSON.stringify(blackout))} class="mb-4 mt-6 max-h-[650px] overflow-x-auto rounded-lg border !bg-zinc-950 py-4 dark:!bg-zinc-900 px-4" />
+    <CodeAstro code={code} lang="ts" theme="github-dark-default" class="mb-4 mt-6 max-h-[650px] overflow-x-auto rounded-lg border !bg-zinc-950 py-4 dark:!bg-zinc-900 px-4" />
     <CopyButton client:load {...{ rawString: code, withMeta: false }} />
 </div>
